# PharmacyMCP

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_client.py
postman/: Pharmacy MCP.postman_collection.json
src/: __init__.py  dpd_server.py
