[project]
name = "pharmacy-mcp"
version = "0.1.0"
description = "MCP Server for Health Canada Drug Product Database (DPD) API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
pharmacy-mcp = "src.dpd_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
